<resources>
    <string name="app_name">Mis Grupos v01</string>

    <!-- Menu Principal  -->
    <string name="texto_tituloPrincipal"><b>BITACORA DE APRENDIZAJE</b></string>
    <string name="texto_tituloSecundario"><b>Haz un seguimiento de tus clases</b></string>
    <string name="boton_acerca_de">Acerca de</string>
    <string name="boton_crearCuenta">CREAR CUENTA</string>
    <string name="boton_iniciarSesion">INICIAR SESIÓN</string>

    <!-- Layout Acerca de -->
    <string name="titulo_acerca_de">Mis Grupos</string>
    <string name="etiqueta_version_acerca_de">Versión</string>
    <string name="texto_version_acerca_de">1.0</string>
    <string name="title_activity_main2">MainActivity</string>

    <!-- Layout Iniciar sesion -->
    <string name="boton_datosUsuario"> DATOS DEL USUARIO </string>
    <string name="mensaje_ci">N° de CI</string>
    <string name="mensaje_nombre"> Nombre y apellido</string>
    <string name="mensaje_email">E-mail</string>
    <string name="mensaje_contrasenha">Contraseña</string>
    <string name="mensaje_contrasenhaConfirm">Confirmar contraseña</string>

    <!-- Layout Crear cuenta -->
    <string name="mensaje_ciCuenta"> N° de CI</string>
    <string name="mensaje_nombreCuenta"> Nombre y apellido</string>
    <string name="mensaje_emailCuenta"> E-mail</string>
    <string name="mensaje_contrasenhaCuenta"> Contraseña</string>
    <string name="boton_registrar"> Registrarse </string>

    <!-- Layout Ver Perfil -->
    <string name="titulo_Perfil">MI USUARIO</string>
    <string name="mensaje_ciPerfil"> N° de CI: </string>
    <string name="mensaje_nombrePerfil"> Nombre y apellido: </string>
    <string name="mensaje_emailPerfil"> E-mail: </string>
    <string name="mensaje_contrasenhaPerfil"> Contraseña: </string>

    <!-- Reestablecer contraseña -->
    <string name="titulo_restablecer">Restablecer Contraseña</string>
    <string name="correo">Correo electrónico</string>
    <string name="reescribirContra">Reescribir Contraseña</string>

    <!-- Layout Menu materias principal -->
    <string name="listarMaterias">Listar Materias</string>
    <string name="temasPendientes">Temas Pendientes</string>
    <string name="verPerfil">Ver Perfil</string>

    <!-- Layout Registrar materia -->
    <string name="registrarMateria"> Registrar nueva materia </string>
    <string name="mensaje_codigo">Código</string>
    <string name="mensaje_materia"> Nombre de materia</string>
    <string name="mensaje_nota"> Agregar una nota</string>
    <string name="boton_aceptar"> Aceptar </string>

    <!-- Layout Registrar materia -->
    <string name="registrarTema"> Registrar nuevo Tema </string>
    <string name="mensaje_codigoTema">Código</string>
    <string name="mensaje_Tema"> Nombre de tema</string>
    <string name="mensaje_FechaTema"> Fecha</string>
    <string name="mensaje_notaTema"> Agregar una nota</string>
    <string name="boton_aceptarTema"> Aceptar </string>

    <!-- Layout Menu tema -->
    <string name="titulo_tema"> Título del tema</string>
    <string name="boton_Items"> Items </string>
    <string name="boton_Ejercicio">Ejercicios</string>
    <string name="boton_Investigacion">Investigación</string>

    <!-- Layout Submenu Item -->
    <string name="boton_ListaItem"> Ver lista </string>
    <string name="boton_RegistrarItem">Registrar Item</string>

    <!-- Layout Registrar Item -->
    <string name="titulo_registrar_item"> Registrar nuevo Item </string>
    <string name="mensaje_codigo_item">Código</string>
    <string name="concepto_registrar_item"> Concepto </string>
    <string name="descripcion_registrar_item"> Descripción </string>
    <string name="aprendido_registrar_item"> Aprendido </string>
    <string name="duda_registrar_item"> Dudas </string>

    <!-- Layout Submenu Ejercicio -->
    <string name="boton_listaEjercicio"> Ver lista </string>
    <string name="boton_registrarEjercicio">Registrar Ejercicio </string>

    <!-- Layout Submenu Investigacion -->
    <string name="boton_listaInvestigacion"> Ver lista </string>
    <string name="boton_registrarInvestigacion">Registrar Investigacion </string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Layout Registrar Ejercicio -->
    <string name="titulo_registrar_ejercicio"> Registrar nuevo Ejercicio </string>
    <string name="mensaje_codigo_ejercicio">Código</string>
    <string name="experiencia_registrar_ejercicio"> Experiencia </string>
    <string name="duda_registrar_ejercicio"> Dudas </string>
    <string name="porcentajeLogrado_registrar_ejercicio"> % logrado </string>
    <string name="tiempoDedicado_registrar_ejercicio"> Tiempo dedicado </string>

    <!-- Layout Registrar Investigacion -->
    <string name="titulo_registrar_investigacion"> Registrar nueva investigacion </string>
    <string name="mensaje_codigo_investigacion">Código</string>
    <string name="tema_investigado"> Tema investigado </string>
    <string name="comentario_registrar_investigacion"> Comentarios </string>
    <string name="duda_registrar_investigacion"> Dudas </string>
    <string name="tiempoDedicado_registrar_investigacion"> Tiempo dedicado </string>
    <string name="nivel_comprension"> Nivel de comprensión </string>

    <!-- Menu -->
    <string name="menu_editar"> Editar </string>
    <string name="menu_eliminar"> Eliminar </string>
    <string name="menu_compartir"> Compartir </string>
    <string name="menu_guardar"> Guardar </string>
    <string name="menu_limpiar"> Limpiar </string>
    <string name="menu_siguiente"> Siguiente </string>

    <!--    <string name="mensaje_FechaTema"> Fecha</string>-->
<!--    <string name="mensaje_notaTema"> Agregar una nota</string>-->
<!--    <string name="boton_aceptarTema"> Aceptar </string>-->

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
