<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:visibility="visible"
    tools:context=".activities.RegistrarInvestigacionActivity">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="119dp"
        android:layout_height="101dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/busqueda" />

    <TextView
        android:id="@+id/titulo_registrar_investigacion"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_below="@+id/imageView1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/titulo_registrar_investigacion"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/codigo_registrar_investigacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titulo_registrar_investigacion"
        android:layout_marginTop="17dp"
        android:drawableLeft="@drawable/logo_codigo"
        android:hint="@string/mensaje_codigo_investigacion" />

    <EditText
        android:id="@+id/tema_investigado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/codigo_registrar_investigacion"
        android:layout_marginTop="13dp"
        android:drawableLeft="@drawable/logo_materia"
        android:hint="@string/tema_investigado" />

    <EditText
        android:id="@+id/comentarios_registrar_investigacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tema_investigado"
        android:layout_marginTop="13dp"
        android:drawableLeft="@drawable/logo_materia"
        android:hint="@string/comentario_registrar_investigacion" />

    <EditText
        android:id="@+id/dudas_registrar_investigacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comentarios_registrar_investigacion"
        android:layout_marginTop="13dp"
        android:drawableLeft="@drawable/logo_materia"
        android:hint="@string/duda_registrar_investigacion" />

    <EditText
        android:id="@+id/tiempoDedicado_registrar_investigacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dudas_registrar_investigacion"
        android:layout_marginTop="13dp"
        android:drawableLeft="@drawable/logo_materia"
        android:hint="@string/tiempoDedicado_registrar_investigacion" />

    <EditText
        android:id="@+id/nivel_comprension"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tiempoDedicado_registrar_investigacion"
        android:layout_marginTop="13dp"
        android:drawableLeft="@drawable/logo_materia"
        android:hint="@string/nivel_comprension" />

    <Button
        android:id="@+id/button1"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nivel_comprension"
        android:layout_centerInParent="true"
        android:layout_marginTop="32dp"
        android:background="@color/celeste"
        android:onClick="registrarInvestigacion"
        android:text="@string/boton_aceptar" />

</RelativeLayout>