<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:visibility="visible"
    tools:context=".activities.RegistrarMateriaActivity">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="152dp"
        android:layout_height="97dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/graduarse" />

    <!--VER img graduarse  android:drawableLeft="@drawable/graduarse"-->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_below="@+id/imageView1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:text="@string/registrarMateria"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="20sp" />

        <!--FALTAN ICONOS android:drawableLeft="@drawable/"-->

    <EditText
        android:id="@+id/campoTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:drawableLeft="@drawable/logo_codigo"
        android:layout_marginTop="26dp"
        android:hint="@string/mensaje_codigo" />

    <EditText
        android:id="@+id/campoTexto1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/campoTexto"
        android:drawableLeft="@drawable/logo_materia"
        android:layout_marginTop="26dp"
        android:hint="@string/mensaje_materia" />

    <EditText
        android:id="@+id/campoTexto2"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/campoTexto"
        android:layout_marginTop="80dp" />

    <EditText
        android:id="@+id/campoTexto3"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/campoTexto"
        android:layout_marginTop="120dp"
        android:hint="@string/mensaje_nota"
        android:visibility="visible" />

    <Button
        android:id="@+id/button1"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/campoTexto3"
        android:layout_centerInParent="true"
        android:layout_marginTop="32dp"
        android:background="@color/celeste"
        android:text="@string/boton_aceptar" />

</RelativeLayout>