<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:visibility="visible"
    tools:context=".activities.MenuTemaPrincipalActivity">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="310dp"
        android:layout_height="272dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:src="@drawable/leyendo" />

    <EditText
        android:id="@+id/text1"
        android:layout_width="395dp"
        android:layout_height="43dp"
        android:layout_below="@+id/imageView1"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:ems="10"
        android:inputType="textPersonName" />


<!--Hace falta estirar el nombreTema?-->
    <TextView
        android:id="@+id/titulo_tema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/titulo_tema"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="20sp" />


    <Button
        android:id="@+id/button1"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titulo_tema"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@color/celeste"
        android:onClick="lanzarVistaItem"
        android:text="@string/boton_Items" />

    <Button
        android:id="@+id/button2"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@color/celeste"
        android:onClick="lanzarVistaCrearCuenta"
        android:text="@string/boton_Ejercicio" />

    <Button
        android:id="@+id/button3"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_centerInParent="true"
        android:layout_marginTop="32dp"
        android:background="@color/celeste"
        android:onClick="lanzarVistaIniciarSesion"
        android:text="@string/boton_Investigacion" />



</RelativeLayout>