<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:visibility="visible"
    tools:context=".activities.SubmenuItemActivity">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="212dp"
        android:layout_height="248dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:src="@drawable/notas" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="32dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/titulo_tema"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@color/celeste"
        android:onClick="lanzarVistaListarItem"
        android:text="@string/boton_ListaItem" />

    <Button
        android:id="@+id/button2"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@color/celeste"
        android:onClick="lanzarVistaRegistrarItem"
        android:text="@string/boton_RegistrarItem" />



</RelativeLayout>