<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:visibility="visible"
    tools:context=".activities.MenuMateriaPrincipalActivity">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="300dp"
        android:layout_height="140dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:src="@drawable/materias" />

    <Button
        android:id="@+id/button1"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerVertical="true"
        android:layout_marginTop="21dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/celeste"
        android:onClick="lanzarVistaListarMateria"
        android:text="@string/listarMaterias" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="140dp"
        android:layout_below="@+id/button1"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="26dp"
        android:layout_marginRight="50dp"
        android:src="@drawable/pendiente" />

    <Button
        android:id="@+id/button2"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerVertical="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="50dp"
        android:background="@color/celeste"
        android:onClick="lanzarVistaTemasPendientes"
        android:text="@string/temasPendientes" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="280dp"
        android:layout_height="120dp"
        android:layout_below="@+id/button2"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:src="@drawable/ic_perfil" />

    <Button
        android:id="@+id/button3"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:layout_centerVertical="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="50dp"
        android:background="@color/celeste"
        android:onClick="lanzarVistaVerPerfil"
        android:text="@string/verPerfil" />

</RelativeLayout>